# production-control-system

./: .env-docker  .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker-publish.yml  python-app.yaml
docker/: app.sh
migrations/: env.py
migrations/versions/: 05295271f3bc_added_required_tables.py
production_tasks/: datatbase.py  filters.py  main.py  models.py  schemas.py  test_main.py
production_tasks/tests/: test_database.py  test_main.py
templates/: home.html
